--- a/i3/config
+++ b/i3/config
@@ -15,6 +15,7 @@ exec /usr/lib/gnome-settings-daemon/gnome-settings-daemon
 # Startup programs
 exec nm-applet
 exec pidgin
+exec ~/.dropbox-dist/dropboxd
 
 # Set background
 #exec_always qiv -z /home/jimmy/images/rossi-and-lorenzo.jpg
