--- a/i3/config
+++ b/i3/config
@@ -167,5 +167,14 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+  status_command i3status
+  mode hide
 }
+
+# Colors
+
+# class                 border  backgr. text    indicator
+client.focused          #333333 #333333 #ffffff #2e9ef4
+client.focused_inactive #333333 #5f676a #ffffff #484e50
+client.unfocused        #333333 #222222 #888888 #292d2e
+client.urgent           #2f343a #900000 #ffffff #900000
