--- a/i3/config
+++ b/i3/config
@@ -175,7 +175,7 @@ bar {
 # Colors
 
 # class                 border  backgr. text    indicator
-client.focused          #333333 #333333 #ffffff #2e9ef4
+client.focused          #333333 #333333 #ffffff #333333
 client.focused_inactive #333333 #5f676a #ffffff #484e50
 client.unfocused        #333333 #222222 #888888 #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
