--- a/i3status.conf
+++ b/i3status.conf
@@ -1,30 +1,27 @@
 general {
-        colors = true
-        interval = 1
+  colors = false
+  interval = 1
 }
 
-order += "disk /"
 order += "wireless wlan0"
 order += "ethernet eth0"
 order += "battery 0"
-order += "cpu_temperature 0"
 order += "cpu_usage"
-order += "load"
 order += "time"
 
 wireless wlan0 {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+  format_up = "wlan0 %ip (%bitrate)"
+  format_down = "wlan0 down"
 }
 
 ethernet eth0 {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip"
-	format_down = "E: down"
+  # if you use %speed, i3status requires root privileges
+  format_up = "eth0 %ip (%speed)"
+	format_down = "eth0 down"
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
+  format = "%status %percentage %remaining"
 }
 
 time {
@@ -32,18 +29,5 @@ time {
 }
 
 cpu_usage {
-	format = "%usage CPU"
-}
-
-load {
-	format = "Load: %1min"
-}
-
-cpu_temperature 0 {
-	path = "/sys/devices/platform/coretemp.0/temp2_input"
-	format = "T: %degrees °C"
-}
-
-disk "/" {
-	format = "%free free"
+	format = "cpu %usage"
 }
