--- a/i3/config
+++ b/i3/config
@@ -192,6 +192,9 @@ client.unfocused        #333333 #222222 #888888 #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
 
 
-# App settings (use xprop to show properties of windows)
+# Window assignments
+assign [class="^Chromium$"] 2
+
+# Window settings (use xprop to show properties of windows)
 for_window [class="^Chromium$"] border none
 
