--- a/i3/config
+++ b/i3/config
@@ -187,8 +187,8 @@ bar {
 
 # class                 border  backgr. text    indicator
 client.focused          #333333 #333333 #ffffff #333333
-client.focused_inactive #333333 #5f676a #ffffff #484e50
-client.unfocused        #333333 #222222 #888888 #292d2e
+client.focused_inactive #333333 #111111 #cccccc #484e50
+client.unfocused        #333333 #111111 #888888 #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
 
 
