settings for i3 without gnome-settings-daemon

--- a/i3/config
+++ b/i3/config
@@ -10,7 +10,18 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 # To get nicer evolution 
-exec /usr/lib/gnome-settings-daemon/gnome-settings-daemon
+#exec /usr/lib/gnome-settings-daemon/gnome-settings-daemon
+#exec /usr/lib/gnome-settings-daemon/gnome-fallback-background-helper
+#exec /usr/lib/gnome-settings-daemon/gnome-fallback-media-keys-helper
+
+# Keyboard layout
+exec setxkbmap se
+
+# Key repeat
+exec xset r rate 170 40
+
+# Start pulseaudio
+exec pulseaudio --start
 
 # Startup programs
 #exec dunst # dmenu style notifications
@@ -22,8 +33,7 @@ exec ~/.dropbox-dist/dropboxd
 exec wmname LG3D
 
 # Set background
-#exec_always qiv -z /home/jimmy/images/rossi-and-lorenzo.jpg
-
+exec_always qiv -z /home/jimmy/images/rossi-and-lorenzo.jpg
 
 
 # Main modifier (win key)
@@ -38,6 +48,11 @@ floating_modifier $mod
 
 # Lock screen
 bindsym $mod+x exec xlock -mode pacman
+
+# Media keys
+bindsym XF86AudioRaiseVolume exec amixer set Master 5%+ unmute
+bindsym XF86AudioLowerVolume exec amixer set Master 5%- unmute
+bindsym XF86AudioMute exec amixer set Master toggle
 
 # start a terminal
 bindsym $mod+Return exec gnome-terminal
@@ -144,31 +159,32 @@ mode "resize" {
   # They resize the border in the direction you pressed, e.g.
   # when pressing left, the window is resized so that it has
   # more space on its left
+  set $resize_step 2
 
-  bindsym j resize shrink left 10 px or 10 ppt
-  bindsym Shift+J resize grow   left 10 px or 10 ppt
+  bindsym j resize shrink left $resize_step px or $resize_step ppt
+  bindsym Shift+J resize grow   left $resize_step px or $resize_step ppt
 
-  bindsym k resize shrink down 10 px or 10 ppt
-  bindsym Shift+K resize grow   down 10 px or 10 ppt
+  bindsym k resize shrink down $resize_step px or $resize_step ppt
+  bindsym Shift+K resize grow   down $resize_step px or $resize_step ppt
 
-  bindsym l resize shrink up 10 px or 10 ppt
-  bindsym Shift+L resize grow   up 10 px or 10 ppt
+  bindsym l resize shrink up $resize_step px or $resize_step ppt
+  bindsym Shift+L resize grow   up $resize_step px or $resize_step ppt
 
-  bindsym odiaeresis resize shrink right 10 px or 10 ppt
-  bindsym Shift+Odiaeresis resize grow   right 10 px or 10 ppt
+  bindsym odiaeresis resize shrink right $resize_step px or $resize_step ppt
+  bindsym Shift+Odiaeresis resize grow   right $resize_step px or $resize_step ppt
 
           # same bindings, but for the arrow keys
-  bindsym Left resize shrink left 10 px or 10 ppt
-  bindsym Shift+Left resize grow   left 10 px or 10 ppt
+  bindsym Left resize shrink left $resize_step px or $resize_step ppt
+  bindsym Shift+Left resize grow   left $resize_step px or $resize_step ppt
 
-  bindsym Down resize shrink down 10 px or 10 ppt
-  bindsym Shift+Down resize grow   down 10 px or 10 ppt
+  bindsym Down resize shrink down $resize_step px or $resize_step ppt
+  bindsym Shift+Down resize grow   down $resize_step px or $resize_step ppt
 
-  bindsym Up resize shrink up 10 px or 10 ppt
-  bindsym Shift+Up resize grow   up 10 px or 10 ppt
+  bindsym Up resize shrink up $resize_step px or $resize_step ppt
+  bindsym Shift+Up resize grow   up $resize_step px or $resize_step ppt
 
-  bindsym Right resize shrink right 10 px or 10 ppt
-  bindsym Shift+Right resize grow   right 10 px or 10 ppt
+  bindsym Right resize shrink right $resize_step px or $resize_step ppt
+  bindsym Shift+Right resize grow   right $resize_step px or $resize_step ppt
 
   # back to normal: Enter or Escape
   bindsym Return mode "default"
