--- a/i3/config
+++ b/i3/config
@@ -59,6 +59,8 @@ bindsym XF86AudioRaiseVolume exec amixer set Master 5%+ unmute
 bindsym XF86AudioLowerVolume exec amixer set Master 5%- unmute
 bindsym XF86AudioMute exec amixer set Master toggle
 
+bindsym XF86Display exec arandr
+
 # start a terminal
 bindsym $mod+Return exec gnome-terminal
 
