--- a/i3/config
+++ b/i3/config
@@ -25,6 +25,8 @@ exec_always synclient TapButton1=0
 exec_always synclient TapButton2=0
 exec_always synclient TapButton3=0
 
+focus_follows_mouse no
+
 # Start pulseaudio
 exec pulseaudio --start
 
