--- a/i3/config
+++ b/i3/config
@@ -19,6 +19,10 @@ exec_always setxkbmap se
 
 # Key repeat
 exec_always xset r rate 170 40
+exec_always xset b off
+
+# Screen setup
+exec_always ~/bin/screens.sh
 
 # Touchpad settings
 exec_always synclient TapButton1=0
@@ -207,7 +211,7 @@ bindsym $mod+r mode "resize"
 bar {
   status_command i3status
   position bottom
-  mode hide
+#  mode hide
 }
 
 # Colors
@@ -220,9 +224,23 @@ client.urgent           #2f343a #900000 #ffffff #900000
 
 
 # Window assignments
-assign [class="^Chromium$"] 2
+#assign [class="^Chromium$"] 2
 
 # Window settings (use xprop to show properties of windows)
 for_window [class="^Chromium$"] border none
+for_window [class="^Chromium-browser$"] border none
 #for_window [class="^jetbrains-idea$"] border none
+
+# Workspace screen layout
+workspace 1 output DisplayPort-1
+workspace 2 output DisplayPort-0
+workspace 3 output DVI-0
+
+workspace 4 output DisplayPort-1
+workspace 5 output DisplayPort-0
+workspace 6 output DVI-0
+
+workspace 7 output DisplayPort-1
+workspace 8 output DisplayPort-0
+workspace 9 output DVI-0
 
