--- a/i3/config
+++ b/i3/config
@@ -71,6 +71,7 @@ bindsym XF86AudioLowerVolume exec amixer set Master 5%- unmute
 bindsym XF86AudioMute exec amixer set Master toggle
 
 bindsym XF86Display exec xrandr --auto && arandr
+bindsym XF86HomePage exec xrandr --auto && arandr
 
 # start a terminal
 bindsym $mod+Return exec gnome-terminal
