--- a/i3/config
+++ b/i3/config
@@ -65,6 +65,10 @@ floating_modifier $mod
 #bindsym $mod+x exec xlock -mode pacman
 bindsym $mod+x exec i3lock -c 000000
 
+# Brightness
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10 -time 1 -steps 1
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10 -time 1 -steps 1
+
 # Media keys
 bindsym XF86AudioRaiseVolume exec amixer set Master 5%+ unmute
 bindsym XF86AudioLowerVolume exec amixer set Master 5%- unmute
