--- a/i3/config
+++ b/i3/config
@@ -220,6 +220,8 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+  font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+#  font -misc-fixed-medium-r-normal--20-200-75-75-C-100-iso10646-1
   status_command i3status
   position bottom
 #  mode hide
