--- a/i3/config
+++ b/i3/config
@@ -248,16 +248,18 @@ for_window [class="^Chromium-browser$"] border none
 # Workspace screen layout
 workspace 1 output VGA-0
 workspace 1 output DP-0-2
+workspace 1 output DisplayPort-1
 workspace 2 output DVI-D-0
 workspace 2 output DP-0-1
+workspace 2 output DisplayPort-0
 workspace 3 output DVI-D-1
 
-workspace 4 output DVI-D-0
-workspace 5 output DVI-D-0
-workspace 6 output DVI-D-0
-workspace 7 output DVI-D-0
-workspace 8 output DVI-D-0
-workspace 9 output DVI-D-0
-workspace 0 output DVI-D-0
+workspace 4 output DVI-0
+workspace 5 output DVI-0
+workspace 6 output DVI-0
+workspace 7 output DVI-0
+workspace 8 output DVI-0
+workspace 9 output DVI-0
+workspace 0 output DVI-0
 
 
