--- a/i3status.conf
+++ b/i3status.conf
@@ -4,7 +4,7 @@ general {
 }
 
 order += "wireless wlp2s0"
-order += "ethernet em1"
+order += "ethernet eno1"
 order += "battery 0"
 order += "load"
 order += "cpu_usage"
@@ -16,7 +16,7 @@ wireless wlp2s0 {
   format_down = "W down"
 }
 
-ethernet em1 {
+ethernet eno1 {
   # if you use %speed, i3status requires root privileges
   format_up = "E %ip (%speed)"
   format_down = "E down"
