--- a/i3status.conf
+++ b/i3status.conf
@@ -3,20 +3,20 @@ general {
   interval = 5
 }
 
-order += "wireless wlp2s0"
-order += "ethernet eno1"
+order += "wireless wlp58s0"
+order += "ethernet enp9s0u1u2"
 order += "battery 0"
 order += "load"
 order += "cpu_usage"
 order += "cpu_temperature 1"
 order += "time"
 
-wireless wlp2s0 {
+wireless wlp58s0 {
   format_up = "W %ip (%quality at %essid, %bitrate)"
   format_down = "W down"
 }
 
-ethernet eno1 {
+ethernet enp9s0u1u2 {
   # if you use %speed, i3status requires root privileges
   format_up = "E %ip (%speed)"
   format_down = "E down"
