--- a/i3status.conf
+++ b/i3status.conf
@@ -41,4 +41,5 @@ cpu_usage {
 
 cpu_temperature 1 {
   format = "%degrees °C"
+  path = "/sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input"
 }
