added usb ethernet

--- a/i3status.conf
+++ b/i3status.conf
@@ -5,6 +5,7 @@ general {
 
 order += "wireless wlp58s0"
 order += "ethernet enp9s0u1u2"
+order += "ethernet enp10s0u2"
 order += "battery 0"
 order += "load"
 order += "cpu_usage"
@@ -18,8 +19,14 @@ wireless wlp58s0 {
 
 ethernet enp9s0u1u2 {
   # if you use %speed, i3status requires root privileges
-  format_up = "E %ip (%speed)"
-  format_down = "E down"
+  format_up = "E1 %ip (%speed)"
+  format_down = "E1 down"
+}
+
+ethernet enp10s0u2 {
+  # if you use %speed, i3status requires root privileges
+  format_up = "E2 %ip (%speed)"
+  format_down = "E2 down"
 }
 
 battery 0 {
