--- a/i3/config
+++ b/i3/config
@@ -80,7 +80,13 @@ bindsym XF86AudioMute exec amixer set Master toggle
 
 bindsym XF86Display exec xrandr --auto && arandr
 bindsym XF86HomePage exec xrandr --auto && arandr
-bindsym XF86AudioPlay exec xrandr --auto && arandr
+#bindsym XF86AudioPlay exec xrandr --auto && arandr
+
+# Control spotify
+bindsym XF86AudioPlay exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause"
+bindsym XF86AudioStop exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Stop"
+bindsym XF86AudioPrev exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous"
+bindsym XF86AudioNext exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next"
 
 # start a terminal
 bindsym $mod+Return exec gnome-terminal
