--- a/i3status.conf
+++ b/i3status.conf
@@ -4,7 +4,7 @@ general {
 }
 
 order += "wireless wlp58s0"
-order += "ethernet enp9s0u1u2"
+order += "ethernet enp0s25"
 order += "ethernet enp10s0u2"
 order += "battery 0"
 order += "load"
@@ -17,7 +17,7 @@ wireless wlp58s0 {
   format_down = "W down"
 }
 
-ethernet enp9s0u1u2 {
+ethernet enp0s25 {
   # if you use %speed, i3status requires root privileges
   format_up = "E1 %ip (%speed)"
   format_down = "E1 down"
