fix eth and temp for the ubuntu machine

--- a/i3status.conf
+++ b/i3status.conf
@@ -4,7 +4,7 @@ general {
 }
 
 order += "wireless wlp58s0"
-order += "ethernet enp0s25"
+order += "ethernet enx00e04cda80ae"
 order += "ethernet enp10s0u2"
 order += "battery 0"
 order += "load"
@@ -17,7 +17,7 @@ wireless wlp58s0 {
   format_down = "W down"
 }
 
-ethernet enp0s25 {
+ethernet enx00e04cda80ae {
   # if you use %speed, i3status requires root privileges
   format_up = "E1 %ip (%speed)"
   format_down = "E1 down"
@@ -48,5 +48,5 @@ cpu_usage {
 
 cpu_temperature 1 {
   format = "%degrees °C"
-  path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
+  path = "/sys/devices/platform/coretemp.0/hwmon/hwmon4/temp1_input"
 }
